[project]
name = "space-invaders"
version = "0.1.0"
description = ""
authors = [
    {name = "Mats",email = "mats@vandervalk.io"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
